sample/error/eval_match_match.bfr
let _ =
  match () with
  | _ . _ . () -> 2
  | _ . () -> 1

codegen []